cgal/boolean cmake fix viewer cmake fix

--- a/optional/CMakeLists.txt
+++ b/optional/CMakeLists.txt
@@ -15,20 +15,22 @@ endif()
 
 
 option(LIBIGL_USE_STATIC_LIBRARY "Use LibIGL as static library" ON)
-option(LIBIGL_WITH_VIEWER      "Use Nanogui Viewer" ON)
-option(LIBIGL_WITH_BBW         "Use BBW"            ON)
-option(LIBIGL_WITH_EMBREE      "Use Embree"         ON)
-option(LIBIGL_WITH_OPENGL      "Use OpenGL"         ON)
-option(LIBIGL_WITH_PNG         "Use PNG"            ON)
-option(LIBIGL_WITH_TETGEN      "Use Tetgen"         ON)
-option(LIBIGL_WITH_TRIANGLE    "Use Triangle"       ON)
-option(LIBIGL_WITH_XML         "Use XML"            ON)
-option(LIBIGL_WITH_LIM         "Use LIM"            ON)
-option(LIBIGL_WITH_COMISO      "Use CoMiso"         ON)
-option(LIBIGL_WITH_BOOLEAN     "Use Cork boolean"   OFF)
-option(LIBIGL_WITH_MATLAB      "Use Matlab"         OFF)
-option(LIBIGL_WITH_MOSEK       "Use MOSEK"          OFF)
-option(LIBIGL_WITH_CGAL        "Use CGAL"           OFF)
+
+option(LIBIGL_WITH_VIEWER           "Use OpenGL viewer"  ON)
+option(LIBIGL_WITH_NANOGUI          "Use Nanogui menu"   OFF)
+option(LIBIGL_WITH_CGAL             "Use CGAL"           OFF)
+option(LIBIGL_WITH_BOOLEAN          "Use Cork boolean"   OFF)
+option(LIBIGL_WITH_COMISO           "Use CoMiso"         ON)
+option(LIBIGL_WITH_EMBREE           "Use Embree"         ON)
+option(LIBIGL_WITH_LIM              "Use LIM"            ON)
+option(LIBIGL_WITH_MATLAB           "Use Matlab"         OFF)
+option(LIBIGL_WITH_MOSEK            "Use MOSEK"          OFF)
+option(LIBIGL_WITH_BBW              "Use BBW"            ON)
+option(LIBIGL_WITH_OPENGL_AND_PNG   "Use OpenGL"         ON)
+option(LIBIGL_WITH_TETGEN           "Use Tetgen"         ON)
+option(LIBIGL_WITH_TRIANGLE         "Use Triangle"       ON)
+option(LIBIGL_WITH_XML              "Use XML"            ON)
+
 if(LIBIGL_WITH_CGAL) # Do not remove or move this block, cgal strange build system fails without it
   find_package(CGAL REQUIRED)
   set(CGAL_DONT_OVERRIDE_CMAKE_FLAGS TRUE CACHE BOOL "CGAL's CMAKE Setup is super annoying ")
