--- a/shared/cmake/CMakeLists.txt
+++ b/shared/cmake/CMakeLists.txt
@@ -139,7 +139,6 @@ if(LIBIGL_WITH_EMBREE)
   if(LIBIGL_USE_STATIC_LIBRARY)
     CompileIGL_Module("embree")
     target_include_directories(iglembree PRIVATE ${EMBREE_DIR}/include)
-    target_compile_options(iglembree PRIVATE -Wno-deprecated-declarations) # avoid some warnings during embree compilation
   endif()
 endif()
 
@@ -224,10 +223,10 @@ if(LIBIGL_WITH_VIEWER)
 
   ### GLEW for linux and windows
   if(UNIX OR (WIN32 AND NOT LIBIGL_WITH_NANOGUI)) ### Compile glew if needed
-    add_library(glew STATIC "${NANOGUI_DIR}/ext/glew/src/glew.c")
-    target_include_directories(glew PRIVATE "${NANOGUI_DIR}/ext/glew/include")
+    set(GLEW_INSTALL OFF CACHE BOOL " " FORCE)
+    add_subdirectory("${NANOGUI_DIR}/ext/glew" "glew")
   endif()
-  if(UNIX OR WIN32)
+  if(NOT APPLE)
     list(APPEND VIEWER_INCLUDE_DIRS "${NANOGUI_DIR}/ext/glew/include")
     list(APPEND VIEWER_LIBRARIES "glew")
   endif()
@@ -254,11 +253,13 @@ if(LIBIGL_WITH_OPENGL_AND_PNG)
   if(LIBIGL_USE_STATIC_LIBRARY)
     CompileIGL_Module("opengl")
     CompileIGL_Module("opengl2")
-    if(NOT APPLE)
-      target_include_directories(iglopengl2 PRIVATE "${LIBIGL_EXTERNAL}/nanogui/ext/glew/include")
-    endif()
     CompileIGL_Module("png")
     target_include_directories(iglpng PRIVATE ${STB_IMAGE_DIR})
+    if(NOT APPLE)
+      target_include_directories(iglopengl PRIVATE "${LIBIGL_EXTERNAL}/nanogui/ext/glew/include")
+      target_include_directories(iglopengl2 PRIVATE "${LIBIGL_EXTERNAL}/nanogui/ext/glew/include")
+      target_include_directories(iglpng PRIVATE "${LIBIGL_EXTERNAL}/nanogui/ext/glew/include")
+    endif()
   endif()
 endif()
 
